--- a/frontend/src/styles/content.scss
+++ b/frontend/src/styles/content.scss
@@ -22,6 +22,20 @@
         border: 1px solid black;
       }
     }
+    .addNews {
+      padding: 5px;
+      border-radius: 6px;
+      border: 1px solid blue;
+      color: red;
+      background-color: #fff;
+      font-size: 16px;
+      margin-top: 1rem;
+      margin-left: auto;
+      &:hover {
+        background-color: red;
+        color: #fff;
+      }
+    }
   }
   .showForm {
      thead {
