--- a/frontend/src/styles/content.scss
+++ b/frontend/src/styles/content.scss
@@ -21,7 +21,7 @@
         border: 1px solid black;
       }
     }
-    .createPost {
+    .createPost,.createBack {
       padding: 5px;
       border-radius: 6px;
       border: 1px solid blue;
@@ -29,11 +29,16 @@
       background-color: #fff;
       font-size: 16px;
       margin-top: 1rem;
-      margin-left: auto;
+      margin-left: 40%;
       &:hover {
         background-color: red;
         color: #fff;
       }
+    }
+    .createBack {
+      background-color: blue;
+      color: #fff;
+      margin-left: 1rem;
     }
   }
   .FormShow {
