--- a/frontend/src/styles/content.scss
+++ b/frontend/src/styles/content.scss
@@ -21,7 +21,8 @@
         border: 1px solid black;
       }
     }
-    .createPost,.createBack {
+    .createPost,
+    .createBack {
       padding: 5px;
       border-radius: 6px;
       border: 1px solid blue;
@@ -101,7 +102,8 @@
                 color: black;
               }
             }
-            .viewShow ,.editShow {
+            .viewShow,
+            .editShow {
               border: 1px solid black;
               margin-right: 5px;
               padding: 5px;
@@ -148,84 +150,123 @@
     left: 45%;
   }
   .card-body {
-    height: auto;
     width: 18rem;
-    border: 1px solid black;
+    height: 50%;
+    padding: 0;
+    border: 3px solid #c1c1c9;
     border-radius: 4px;
     margin-bottom: 1rem;
-    .imageDish {
-      width: 200px;
-      height: 200px;
-    }
-    cursor: pointer;
-    &:hover .DeleteX {
-      display: block;
-    }
-    &:hover .EditIcons {
-      display: block;
-    }
-    .card-title {
-      font-weight: 600;
-    }
-    .card-address {
-      font-size: 14px;
-    }
-    .incre {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      p {
-        cursor: pointer;
-        font-size: 20px;
-        width: 20px;
-        height: 33px;
-        background-color: black;
-        position: relative;
-        text-align: center;
-        border-radius: 4px;
-        color: #fff;
-        &:hover {
-          background-color: yellow;
-          color: black;
-        }
-      }
-      span {
+    .card-delete {
+      background-color: #575757;
+      color: #fff;
+      font-size: 1.2rem;
+      padding: 5px;
+      border-radius: 18%;
+      position: absolute;
+      left: 96%;
+      top: -3%;
+      cursor: pointer;
+      &:hover {
+        background-color: yellow;
+        color: black;
       }
     }
-
-    .buttonAddAndRead {
-      display: grid;
-      margin-top: 1rem;
-      padding: 1rem;
-      .AddDish {
+  }
+  .card-content {
+    position: relative;
+    .card-icon-list {
+      position: absolute;
+      right: 0;
+      margin-right: 14px;
+      font-size: 17px;
+      top: 48%;
+      cursor: pointer;
+    }
+    .card-service {
+      background-color: #f0f0f0;
+      color: black;
+      width: 7rem;
+      height: 4rem;
+      border-radius: 4px;
+      border: 1.5px solid black;
+      cursor: pointer;
+      position: absolute;
+      left: 60%;
+      top: 7%;
+      .card-link-edit {
         text-decoration: none;
         color: black;
-        text-align: center;
+        .card-item-edit {
+          padding: 4px;
+          margin-bottom: 0;
+          &:hover {
+            background-color: yellow;
+          }
+        }
       }
-      .ReadViews {
-        text-align: center;
-      }
-      .AddDish,
-      .ReadViews {
-        margin-bottom: 0.5rem;
-        border: 1px solid black;
+      .card-item-delete {
+        padding: 4px;
+        margin-bottom: 0;
+
         &:hover {
           background-color: yellow;
         }
       }
     }
-    .DeleteX {
-      position: absolute;
-      margin-left: 14.8rem;
-      display: none;
-      font-family: 600;
+  }
+  .imageDish {
+    width: 200px;
+    height: 200px;
+    cursor: pointer;
+  }
+  .card-title {
+    font-weight: 600;
+  }
+  .card-address {
+    font-size: 14px;
+  }
+  .incre {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    p {
+      cursor: pointer;
+      font-size: 20px;
+      width: 20px;
+      height: 33px;
+      background-color: black;
+      position: relative;
+      text-align: center;
+      border-radius: 4px;
+      color: #fff;
+      &:hover {
+        background-color: yellow;
+        color: black;
+      }
     }
-    .EditIcons {
-      position: absolute;
-      margin-left: 13rem;
-      display: none;
-      font-family: 600;
+    span {
+    }
+  }
+
+  .buttonAddAndRead {
+    display: grid;
+    margin-top: 1rem;
+    padding: 1rem;
+    .AddDish {
+      text-decoration: none;
       color: black;
+      text-align: center;
+    }
+    .ReadViews {
+      text-align: center;
+    }
+    .AddDish,
+    .ReadViews {
+      margin-bottom: 0.5rem;
+      border: 1px solid black;
+      &:hover {
+        background-color: yellow;
+      }
     }
   }
 }
@@ -355,3 +396,20 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .card {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 1100px) {
+  .card {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 900px) {
+  .card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
