--- a/frontend/src/styles/content.scss
+++ b/frontend/src/styles/content.scss
@@ -174,6 +174,7 @@
   }
   .card-content {
     position: relative;
+    padding: 11px;
     .card-icon-list {
       position: absolute;
       right: 0;
