--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,20 @@
   margin: 0;
   padding: 0;
 }
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-enter-active {
+  opacity: 0;
+  transition:  opacity 300ms ease-out;
+}
