--- a/admin-app/src/App.css
+++ b/admin-app/src/App.css
@@ -1,42 +1,57 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.container {
+  grid-template-rows: 10px 80.5vh 100px;
+  grid-template-columns: 290px 683px 228px;
+  grid-auto-rows: minmax(60, auto);
+  grid-template-areas:
+    "header header header"
+    "nav content content"
+    "nav content content"
+    "nav content content";
+  row-gap: 10px;
+  padding: 0 24px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.header {
+  grid-area: header;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.nav {
+  padding: 0 24px;
+  grid-area: nav;
+  background-color: rgb(79 70 229 / 1);
+  color: #fff;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  font-size: 18px;
+  grid-column: 1/5;
+  grid-row: 2/5;
+}
+.content {
+  grid-area: content;
+  grid-column: 2/5;
+  grid-row: 2/5;
+  background-color: rgb(255 255 255 / 1);
+  color: black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.list:hover {
+  background-color: #4338ca;
+  color: rgb(255 255 255 / 1);
+  border-radius: 6px;
 }
