--- a/admin-app-vanilla-js/Layout/index.html
+++ b/admin-app-vanilla-js/Layout/index.html
@@ -5,18 +5,285 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Chicken</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="section-header"></div>
-    <div class="section-content"></div>
-    <div class="section-footer"></div>
+  <div class="container-fluid p-0">
+    <div class="section-header">
+      <div class="container">
+        <div class="row mt-2 my-2">
+          <div class="col-lg-8">
+            <div class="header-logo-home d-flex">
+              <img src="../public/kfc-logo.svg" width="78px" height="78px" alt="">
+              <ul class="list-inline d-flex align-items-center ms-2">
+                <li class="fs-5 mx-2 ms-2">
+                  <a href="">
+                    Thực đơn
+                  </a>
+                </li>
+                <li class="fs-5 mx-2">
+                  <a href="">
+                    Khuyến mãi
+                  </a>
+                </li>
+                <li class="fs-5 mx-2">
+                  <a href="">
+                    Dịch vụ
+                    tiệc
+                  </a>
+                </li>
+                <li class="fs-5 mx-2">
+                  <a href="">
+                    Hệ thống
+                    nhà hàng
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4 m-auto">
+            <div class="header-logo-menu">
+              <ul class="list-inline d-flex align-items-center justify-content-end">
+                <li class="ms-4">
+                  <a href="">
+                    <i class="fa-regular fa-circle-user fs-3 text-black"></i>
+                  </a>
+                </li>
+                <li class="ms-4">
+                  <a href="">
+                    <i class="fa-solid fa-cart-shopping fs-3 text-black"></i>
+                  </a>
+                </li>
+                <li class="ms-4">
+                  <button class="btn btn-white" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i
+                      class="fa-solid fa-bars fs-3"></i></button>
+                  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header">
+                      <div class="header-two-line">
+                        <div class="line-one"></div>
+                        <div class="line-two"></div>
+                        <div class="line-three"></div>
+                      </div>
+                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <div class="menu-content"></div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-hero-nav d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center align-items-baseline ">
+            <p>
+              <span class="ms-5 text-white">Đặt ngay</span>
+              <span class="ms-5 text-white">
+                <i class="fa-solid fa-truck-fast"></i>
+                Giao hàng</span>
+              <span class="ms-5 text-white">
+                <i class="fa-solid fa-face-smile"></i>
+                hoặc Mang đi</span>
+            </p>
+            <button class="start-order ms-5">Bắt đầu đặt hàng</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-content">
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://static.kfcvietnam.com.vn/images/content/home/carousel/lg/Chizza.webp?v=LK8X94"
+              class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://static.kfcvietnam.com.vn/images/content/home/carousel/lg/NgotNgao.webp?v=LK8X94"
+              class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://static.kfcvietnam.com.vn/images/content/home/carousel/lg/Free.webp?v=LK8X94"
+              class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- nhiều sản phẩm -->
+      <div class="container">
+        <div class="row">
+          <h2>Danh mục món ăn</h2>
+          <div class="col-lg-3 mb-4">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/KHUYEN%20MAI.jpg?v=LK8X94"
+                  class="card-img-top" alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/MON%20MOI.jpg?v=LK8X94"
+                  class="card-img-top" alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/COMBO%201%20NGUOI.jpg?v=LK8X94"
+                  class="card-img-top" alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/COMBO%20NHOM.jpg?v=LK8X94"
+                  class="card-img-top" alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/GA.jpg?v=LK8X94" class="card-img-top"
+                  alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/COM.jpg?v=LK8X94" class="card-img-top"
+                  alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/MON%20AN%20NHE.jpg?v=LK8X94"
+                  class="card-img-top" alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="category">
+              <div class="card" style="width: 18rem;">
+                <img src="https://static.kfcvietnam.com.vn/images/category/lg/TRANG%20MIENG.jpg?v=LK8X94"
+                  class="card-img-top" alt="Sunset Over the Sea" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- banner cuoi footer -->
+      <div class="container-fluid mt-5">
+        <div class="row">
+          <div class="col-lg-6">
+            <img height="230px"
+              src="https://static.kfcvietnam.com.vn/images/content/home/mobileappbanner/lg/banner.jpg?v=LK8X94" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-footer py-2">
+      <div class="container-fluid">
+        <div class="row footer p-2 ">
+        </div>
+        <p class="text-center text-white fs-6">Copyright © 2023 KFC Vietnam</p>
+        <hr style="border: 1px solid white;">
+        <div class="row">
+          <div class="introduce-company d-flex align-items-center" >
+            <div class="col-lg-6">
+              <div class="company">
+                <h3 class="text-white">CÔNG TY LIÊN DOANH TNHH KFC VIỆT NAM</h1>
+                  <p class="text-white"> Số 292 Bà Triệu, P. Lê Đại Hành, Q. Hai Bà Trưng, TP. Hà Nội.</p>
+                  <p class="text-white"> Điện thoại: (028) 38489828</p>
+                  <p class="text-white"> Email: lienhe@kfcvietnam.com.vn</p>
+                  <p class="text-white"> Mã số thuế: 0100773885</p>
+                  <p class="text-white">
+                    Ngày cấp: 29/10/1998 - Nơi cấp: Cục Thuế Thành Phố Hà Nội
+                  </p>
+              </div>
+            </div>
+            <div class="col-lg-6 d-flex justify-content-center">
+              <div class="logo-bocongthuong">
+                <img src="https://kfcvn-static.cognizantorderserv.com/images/email/logo_footer.png" width="200px"
+                  height="77px" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header-two-line-footer">
+        <div class="line-one-footer"></div>
+        <div class="line-two-footer"></div>
+        <div class="line-three-footer"></div>
+      </div>
+    </div>
   </div>
 </body>
 <script src="layout.js"></script>
+<script src="../bootstrap/js/bootstrap.bundle.js"></script>
 
 </html>
