--- a/admin-app-vanilla-js/Layout/index.html
+++ b/admin-app-vanilla-js/Layout/index.html
@@ -61,9 +61,11 @@
                 </li>
                 <li class="ms-4">
                   <div class="cart-btn">
-                    <i class="fa-solid fa-cart-shopping fs-3 text-black"></i>
-                    <div id="cart-container">
-                      <button class="btn" id="clear-cart-btn">Clear Cart</button>
+                    <button class="btn-cart">
+                      <i class="fa-solid fa-cart-shopping fs-3 text-black"></i>
+                    </button>
+                    <div class="cart-container">
+                      <button class="btn text-white" id="clear-cart-btn">Clear Cart</button>
                       <div id="products-container"></div>
                       <p>Total number of items: <span id="total-items">0</span></p>
                       <p>Subtotal: <span id="subtotal">$0</span></p>
@@ -148,15 +150,16 @@
             <hr style="margin-top: 28px;" />
           </div>
         </div>
-        <div class="section-product row">
+        <div class="section-product row gy-lg-4 gy-md-4 gx-md-4 gy-sm-3 gx-sm-3 ">
+        
         </div>
       </div>
     </div>
     <!-- banner cuoi footer -->
-    <div class="container-fluid mt-5">
+    <div class="container-fluid py-5 mt-5">
       <div class="row">
         <div class="col-lg-6">
-          <img height="230px"
+          <img 
             src="https://static.kfcvietnam.com.vn/images/content/home/mobileappbanner/lg/banner.jpg?v=LK8X94" alt="">
         </div>
       </div>
