push done thông báo

--- a/admin-app-vanilla-js/Layout/index.html
+++ b/admin-app-vanilla-js/Layout/index.html
@@ -67,10 +67,10 @@
                     <div class="cart-container">
                       <button class="btn text-white" id="clear-cart-btn">Clear Cart</button>
                       <div id="products-container"></div>
-                      <p>Total number of items: <span id="total-items">0</span></p>
-                      <p>Subtotal: <span id="subtotal">$0</span></p>
-                      <p>Taxes: <span id="taxes">$0</span></p>
-                      <p>Total: <span id="total">$0</span></p>
+                      <p>Total number of items: <span class="total-items">0</span></p>
+                      <p>Subtotal: <span class="subtotal">0 VND</span></p>
+                      <p>Taxes: <span class="taxes">0 VND</span></p>
+                      <p>Total: <span class="total">0 VND</span></p>
                     </div>
                   </div>
                 </li>
