push layout.js vanilla js

--- a/admin-app-vanilla-js/Layout/index.html
+++ b/admin-app-vanilla-js/Layout/index.html
@@ -14,9 +14,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-  </style>
 </head>
 
 <body>
@@ -24,27 +21,29 @@
     <div class="section-header">
       <div class="container">
         <div class="row mt-2 my-2">
-          <div class="col-lg-8">
+          <div class="col-lg-8 col-md-8 col-sm-8 col-12">
             <div class="header-logo-home d-flex">
               <img src="../public/kfc-logo.svg" width="78px" height="78px" alt="">
               <ul class="list-inline d-flex align-items-center ms-2">
-                <li class="fs-5 mx-2 ms-2">
+                <li class=" mx-2 ms-2">
                   <a href="">
-                    Thực đơn
+                    <p>
+                      Thực đơn
+                    </p>
                   </a>
                 </li>
-                <li class="fs-5 mx-2">
+                <li class=" mx-2">
                   <a href="">
                     Khuyến mãi
                   </a>
                 </li>
-                <li class="fs-5 mx-2">
+                <li class=" mx-2">
                   <a href="">
                     Dịch vụ
                     tiệc
                   </a>
                 </li>
-                <li class="fs-5 mx-2">
+                <li class=" mx-2">
                   <a href="">
                     Hệ thống
                     nhà hàng
@@ -53,7 +52,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-4 m-auto">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-12 m-auto">
             <div class="header-logo-menu">
               <ul class="list-inline d-flex align-items-center justify-content-end">
                 <li class="ms-4">
@@ -150,17 +149,18 @@
             <hr style="margin-top: 28px;" />
           </div>
         </div>
-        <div class="section-product row gy-lg-4 gy-md-4 gx-md-4 gy-sm-3 gx-sm-3 ">
-        
+        <div class="container">
+          <div class="section-product row  gy-lg-4 gy-md-4 gx-md-4 gy-sm-3 gx-sm-3 ">
+          
+          </div>
         </div>
       </div>
     </div>
     <!-- banner cuoi footer -->
-    <div class="container-fluid py-5 mt-5">
+    <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-lg-6">
-          <img 
-            src="https://static.kfcvietnam.com.vn/images/content/home/mobileappbanner/lg/banner.jpg?v=LK8X94" alt="">
+          <img width="180%" src="https://static.kfcvietnam.com.vn/images/content/home/mobileappbanner/lg/banner.jpg?v=LK8X94" alt="">
         </div>
       </div>
     </div>
@@ -199,7 +199,6 @@
       <div class="line-two-footer"></div>
       <div class="line-three-footer"></div>
     </div>
-  </div>
   </div>
 </body>
 <script src="layout.js"></script>
