--- a/admin-app-vanilla-js/Layout/main.css
+++ b/admin-app-vanilla-js/Layout/main.css
@@ -41,23 +41,6 @@ body {
 .section-header .header-logo-menu li {
   margin-left: 10px;
 }
-.section-header .header-logo-menu .offcanvas-header {
-  position: relative;
-}
-.section-header .header-logo-menu .header-two-line {
-  display: flex;
-  position: absolute;
-  left: 45%;
-  top: 1px;
-}
-.section-header .header-logo-menu .header-two-line .line-one,
-.section-header .header-logo-menu .header-two-line .line-two,
-.section-header .header-logo-menu .header-two-line .line-three {
-  width: 11px;
-  height: 30px;
-  background-color: #e4002b;
-  margin: 0 5px;
-}
 .section-header .header-logo-menu .cart-btn {
   position: relative;
 }
@@ -95,6 +78,23 @@ body {
 }
 .section-header .header-logo-menu .cart-btn .cart-container.active {
   display: block;
+}
+.section-header .header-logo-menu .offcanvas-header {
+  position: relative;
+}
+.section-header .header-logo-menu .header-two-line {
+  display: flex;
+  position: absolute;
+  left: 45%;
+  top: 1px;
+}
+.section-header .header-logo-menu .header-two-line .line-one,
+.section-header .header-logo-menu .header-two-line .line-two,
+.section-header .header-logo-menu .header-two-line .line-three {
+  width: 11px;
+  height: 30px;
+  background-color: #e4002b;
+  margin: 0 5px;
 }
 
 .section-hero-nav {
@@ -154,27 +154,26 @@ body {
   background: #202124;
   width: 100%;
 }
-
-.header-two-line-footer {
+.section-footer .header-two-line-footer {
   position: absolute;
   top: 92%;
   right: 50%;
 }
-.header-two-line-footer .line-one-footer {
+.section-footer .header-two-line-footer .line-one-footer {
   width: 11px;
   height: 35px;
   background-color: #fff;
   float: left;
   margin-left: 8px;
 }
-.header-two-line-footer .line-two-footer {
+.section-footer .header-two-line-footer .line-two-footer {
   width: 11px;
   height: 35px;
   background-color: #fff;
   float: right;
   margin-left: 8px;
 }
-.header-two-line-footer .line-three-footer {
+.section-footer .header-two-line-footer .line-three-footer {
   width: 11px;
   height: 35px;
   background-color: #fff;
