--- a/admin-app-vanilla-js/Layout/index.html
+++ b/admin-app-vanilla-js/Layout/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <div class="container-fluid p-0">
+    <!-- Header -->
     <div class="section-header">
       <div class="container">
         <div class="row mt-2 my-2">
@@ -98,6 +99,7 @@
         </div>
       </div>
     </div>
+    <!-- Hero -->
     <div class="section-hero-nav d-flex align-items-center">
       <div class="container">
         <div class="row">
@@ -116,6 +118,7 @@
         </div>
       </div>
     </div>
+    <!-- Content -->
     <div class="section-content">
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
@@ -156,7 +159,7 @@
         </div>
       </div>
     </div>
-    <!-- banner cuoi footer -->
+    <!-- banner cuối footer -->
     <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-lg-6">
@@ -165,6 +168,7 @@
       </div>
     </div>
   </div>
+  <!-- Footer -->
   <div class="section-footer py-2">
     <div class="container-fluid">
       <div class="row footer p-2 ">
